deploy/example1/managed-certificate-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: managed-certificate-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: managed-certificate-controller
  template:
    metadata:
      labels:
        app: managed-certificate-controller
    spec:
      serviceAccountName: managed-certificate-account
      containers:
        - name: managed-certificate-controller
          # ci_latest was broken when last installed, pin version for stability
          image: eu.gcr.io/managed-certs-gke/managed-certificate-controller:v0.3.0
          imagePullPolicy: Always
          volumeMounts:
            - name: ssl-certs
              mountPath: "/etc/ssl/certs"
              readOnly: true
            - name: usrsharecacerts
              mountPath: "/usr/share/ca-certificates"
              readOnly: true
            - name: logfile
              mountPath: "/var/log/managed_certificate_controller.log"
              readOnly: false
            - mountPath: "/config"
              name: svc-acc-json-gke-managed-certs  # Mount file from secret
      volumes:
        - name: ssl-certs
          hostPath:
            path: "/etc/ssl/certs"
        - name: usrsharecacerts
          hostPath:
            path: "/usr/share/ca-certificates"
        - name: logfile
          hostPath:
            path: "/var/log/managed_certificate_controller.log"
            type: FileOrCreate
        - name: svc-acc-json-gke-managed-certs
          secret:
            secretName: gcp-svc-acc-gke-managed-certs # Requires manually created secret
