deploy/example1/ingress-demo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "tls-ingress-ip" # Requires: gcloud compute addresses create tls-ingress-ip --global

spec:
  rules:
    - host: web1.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: web
              servicePort: 8080
